--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,4 +4,9 @@
   <welcome-file-list> 
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+  	<param-name>pais</param-name>
+  	<param-value>Brasil</param-value>
+  </context-param>
 </web-app>
