--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/israel/Downloads/mariadb-java-client-2.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/israel/Downloads/mariadb-java-client-2.7.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
